# ausettings

./: .gitignore  Cargo.toml  LICENSE  README.md  ausettings_icon.xcf  build.rs  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
src/: core.rs  main.rs  ui.rs
src-web/: App.ts  Main.tsx  MainContent.tsx
src/core/: app.rs  aucaptureoffsets.rs  auprocess.rs  auprocessreadwrite.rs  game_settings.rs  process.rs  process_impl.rs  process_mock.rs  storage.rs
src/ui/: app_wrapper.rs
web-src/: Main.tsx  MainContent.tsx  index.tsx
