[package]
name = 'ausettings'
version = '0.1.0'
authors = ['progre <djyayutto@gmail.com>']
edition = '2018'

[dependencies]
anyhow = '1.0'
directories-next = '2.0'
hex = '0.4'
json5 = '0.3'
serde_json = '1.0'
sha2 = '0.9'

[dependencies.serde]
version = '1.0'
features = ['derive']

[dependencies.reqwest]
version = '0.10'
features = [
    'blocking',
    'json',
]

[dependencies.web-view]
git = 'https://github.com/Boscop/web-view.git'
features = ['edge']
[target."cfg(windows)".dependencies.winapi]
version = '0.3'
features = [
    'basetsd',
    'handleapi',
    'memoryapi',
    'ntdef',
    'processthreadsapi',
    'psapi',
    'tlhelp32',
]

[target."cfg(windows)".build-dependencies]
winres = '0.1'
