[package]
name = 'ausettings'
version = '0.4.0'
authors = ['progre <djyayutto@gmail.com>']
edition = '2018'
publish = false

[dependencies]
anyhow = '1.0'
directories-next = '2.0'
hex = '0.4'
json5 = '0.3'
serde_json = '1.0'
sha2 = '0.9'

[dependencies.reqwest]
version = '0.10'
features = [
    'blocking',
    'json',
]

[dependencies.serde]
version = '1.0'
features = ['derive']

[dependencies.tokio]
version = '1.0'
features = ['full']

[dependencies.web-view]
git = 'https://github.com/progre/web-view'
branch = 'revert-218-master'
features = ['edge']
[target."cfg(windows)".dependencies.winapi]
version = '0.3'
features = [
    'basetsd',
    'handleapi',
    'memoryapi',
    'ntdef',
    'processthreadsapi',
    'psapi',
    'tlhelp32',
]

[target."cfg(windows)".build-dependencies]
winres = '0.1'
